--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://laoiseearle.github.io/fretfinder",
+  "homepage": "https://CodeSculptGames.github.io/FretFinder",
   "name": "react-files",
   "version": "0.1.0",
   "private": true,
